--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="ssD-WY-eJS" kind="relationship" relationship="viewControllers" id="pyi-2r-hKf"/>
-                        <segue destination="ak0-XS-vqz" kind="relationship" relationship="viewControllers" id="yZd-If-EXh"/>
+                        <segue destination="gSo-rN-pZL" kind="relationship" relationship="viewControllers" id="yZd-If-EXh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kfC-iQ-67f" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -55,7 +55,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vs1-SA-r5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1872" y="-451"/>
+            <point key="canvasLocation" x="1719" y="-334"/>
         </scene>
         <!--SET game-->
         <scene sceneID="tne-QT-ifu">
@@ -304,7 +304,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1107.2463768115942" y="-377.44565217391306"/>
+            <point key="canvasLocation" x="910" y="-717"/>
         </scene>
         <!--PLAYING game-->
         <scene sceneID="FW0-gt-CdV">
@@ -524,8 +524,13 @@
                         <color key="backgroundColor" red="0.1281659621" green="0.40493442359999998" blue="0.21551658339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="LQ3-xV-OXc"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="PLAYING" id="BgD-vW-EUm"/>
-                    <navigationItem key="navigationItem" id="Jtg-9b-FJr"/>
+                    <navigationItem key="navigationItem" id="Jtg-9b-FJr">
+                        <barButtonItem key="rightBarButtonItem" title="history" id="LOP-Zd-zGw">
+                            <connections>
+                                <segue destination="RGe-Gf-6UG" kind="push" identifier="show_history" id="qIz-n2-f9h"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="lastResultDescription" destination="IB6-Yg-JPq" id="bGw-DS-fpZ"/>
                         <outlet property="scoreLable" destination="vyc-fC-YaW" id="6en-9s-27U"/>
@@ -548,7 +553,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="2897" y="-371"/>
+            <point key="canvasLocation" x="930" y="75"/>
         </scene>
         <!--SET-->
         <scene sceneID="BGo-4G-VLB">
@@ -567,10 +572,32 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E0V-Ap-VMM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="200.00000000000003" y="-377.44565217391306"/>
+            <point key="canvasLocation" x="196" y="-716"/>
+        </scene>
+        <!--PLAYING-->
+        <scene sceneID="kWU-di-nsz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gSo-rN-pZL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="PLAYING" id="BgD-vW-EUm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RDn-bt-cMv">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ak0-XS-vqz" kind="relationship" relationship="rootViewController" id="SNi-cB-5hf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TAJ-Ix-1cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="184" y="75"/>
         </scene>
     </scenes>
     <resources>
         <image name="cardback" width="64" height="96"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="qIz-n2-f9h"/>
+    </inferredMetricsTieBreakers>
 </document>
